# clion-opencv

./: CMakeLists.txt  HandDetection.cpp  HandDetection.h  InputHandler.cpp  InputHandler.h  main.cpp
